overflow fixed

--- a/dataviz.css
+++ b/dataviz.css
@@ -20,7 +20,7 @@ letter-spacing: 20px;
 body{
     background-color: rgb(0, 0, 0);
     display:grid;
-    
+    overflow: hidden;
 }
 
 /* HTML: <div class="loader"></div> */
@@ -55,6 +55,8 @@ body{
    background: rgb(131,58,180);
 background: linear-gradient(0deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 46%, rgba(252,176,69,1) 100%);
     animation: none/* fillWater 60s ease-in-out forwards */;
+    overflow: hidden;
+  
   }
   
   /* Animation de remplissage */
